# pyrecipe

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
recipe/: __init__.py
