[tool.poetry]
name = "pyrecipe"
version = "0.1.0a1"
description = ""
authors = ["ZhengYu, Xu <zen-xu@outlook.com>"]
readme = "README.md"
packages = [{ include = "recipe" }]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-sugar = "^0.9.7"
black = "23.3.0"
isort = "5.11.5"

[tool.isort]
profile = "black"
line_length = 88
atomic = true
include_trailing_comma = true
use_parentheses = true
filter_files = true

[tool.ruff]
target-version = "py37"
line-length = 88
ignore = ["E501", "E731"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E401"]

[tool.mypy]
python_version = "3.7"
enable_incomplete_feature = ["Unpack", "TypeVarTuple"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
